--- a/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
-<ul>
-  <li><a routerLink="/admin">Dashboard</a></li>
-  <li><a routerLink="/admin/customers">Customers</a></li>
-  <li><a routerLink="/admin/products">Products</a></li>
-  <li><a routerLink="/admin/orders">Orders</a></li>
-  <li><a routerLink="">View Webpage</a></li>
-</ul>
+<mat-list role="list">
+  <a mat-list-item role="listitem" routerLink="/admin">Dashboard</a>
+  <a mat-list-item role="listitem" routerLink="/admin/customers">Customers</a>
+  <a mat-list-item role="listitem" routerLink="/admin/products">Products</a>
+  <a mat-list-item role="listitem" routerLink="/admin/orders">Orders</a>
+  <a mat-list-item role="listitem" routerLink="">View Webpage</a>
+</mat-list>
